# mosse-c-gen

./: .gitignore  Makefile  Makefile.am  Makefile.in  cmakelists.py  common.py  config  configure.ac  gauss_kernel.py  gauss_kernel_fft.py  getter_api.py  hann.py  log_matrix.py  main.py  make_gauss_kernel_mat.py
stub/: CMakeLists.txt  CMakeLists.txt.stub  MosseApi.cpp.stub  MosseApi.hpp.stub  MosseApiDebug.hpp.stub  main.cpp
